// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveStream renders smallscreen 1`] = `
<div
  style={
    {
      "margin": "auto",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <p>
    The video below is embedded from YouTube, however if it does not play properly, please click one of the following links to view the live church service.
    <br />
     
    <a
      href="https://www.youtube.com/@collegelutheranchurch/streams"
      rel="noreferrer"
      style={
        {
          "fontWeight": "bold",
        }
      }
      target="_blank"
    >
      YouTube Live
    </a>
     
    |
     
    <a
      href="https://www.facebook.com/CollegeLutheranChurch/videos/?ref=page_internal"
      rel="noreferrer"
      style={
        {
          "fontWeight": "bold",
        }
      }
      target="_blank"
    >
      Facebook Videos
    </a>
     
    - These links also provide a way to view previous church services that were recorded.
  </p>
  <iframe
    allow="autoplay; fullscreen; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="360"
    src="https://www.youtube.com/embed/live_stream?channel=UCOra1rXiO-BHzMDNlLd9hFQ"
    title="Live Stream Small"
    width="100%"
  />
  <div
    style={
      {
        "marginTop": "38vh",
      }
    }
  >
     
  </div>
</div>
`;

exports[`LiveStream renders widescreen 1`] = `
<div
  style={
    {
      "margin": "auto",
      "textAlign": "center",
      "width": "100%",
    }
  }
>
  <h5
    style={
      {
        "marginTop": "0.5rem",
      }
    }
  >
    Welcome to Our Livestream Page
  </h5>
  <p>
    The video below is embedded from YouTube, however if it does not play properly, please click one of the following links to view the live church service.
    <br />
     
    <a
      href="https://www.youtube.com/@collegelutheranchurch/streams"
      rel="noreferrer"
      style={
        {
          "fontWeight": "bold",
        }
      }
      target="_blank"
    >
      YouTube Live
    </a>
     
    |
     
    <a
      href="https://www.facebook.com/CollegeLutheranChurch/videos/?ref=page_internal"
      rel="noreferrer"
      style={
        {
          "fontWeight": "bold",
        }
      }
      target="_blank"
    >
      Facebook Videos
    </a>
     
    - These links also provide a way to view previous church services that were recorded.
  </p>
  <iframe
    allow="autoplay; fullscreen; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="620"
    src="https://www.youtube.com/embed/live_stream?channel=UCOra1rXiO-BHzMDNlLd9hFQ"
    title="Live Stream Wide"
    width="930"
  />
  <div
    style={
      {
        "marginTop": "0px",
      }
    }
  >
     
  </div>
</div>
`;
